--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
-name = "mcts"
+name = "mct-rs"
 version = "0.1.0"
 edition = "2024"
+authors = ["Tolumide Shopein <tolumideshopein@gmail.com>"]
+keywords = ["ai", "mcts", "mctrs", "monte", "carlo"]
+categories = ["algorithms"]
+description = "A fast, flexible, and simple implementation of Monte Carlo Tree Search (MCTS) algorithm in Rust"
+license = "MIT OR Apache-2.0"
+publish = true
+repository = "https://github.com/tolumide-ng/mct-rs"
 
 [dependencies]
 getrandom = { version = "0.2", features = ["js"] }
